--- a/package.json
+++ b/package.json
@@ -70,5 +70,12 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
-  }
+  },
+  "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "export": "next export",
+  "deploy": "pnpm build && pnpm export && pnpm gh-pages -d out"
+}
+
 }
