--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "build": "next build",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "pnpm build && pnpm gh-pages -d out"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -69,13 +70,8 @@
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
-  },
-  "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "export": "next export",
-  "deploy": "pnpm build && pnpm export && pnpm gh-pages -d out"
+    "typescript": "^5",
+    "gh-pages": "^6.1.1"
+  }
 }
 
-}
